service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-z-app-service
spec:
  selector:
    app: demo-z-app
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
