sevice.yaml
apiVersion: v1
kind: Service
metadata:
  name: crm-app-service
spec:
  selector:
    app: crm-app
  ports:
  - port: 80
    targetPort: 8080
  type: LoadBalancer
